@@ -43,7 +43,6 @@
 #include <math.h>
 #include <errno.h> /* errno */
 #include <signal.h> /* signal() */
-#include <locale.h> /* setlocale() */
 #include <gtk/gtk.h>
 #include <gdk/gdkkeysyms.h>
 #include "libgnome/libgnomeP.h"
@@ -385,7 +384,6 @@ set_result(GnomeCalculator *gc)
 	gchar buf[80];
 	gchar format[20];
 	gint i;
-	char *old_locale;
 
 	g_return_if_fail(gc!=NULL);
 
@@ -401,16 +399,14 @@ set_result(GnomeCalculator *gc)
         /* make sure put values in a consistent manner */
 	/* XXX: perhaps we can make sure the calculator works on all locales,
 	 * but currently it will lose precision if we don't do this */
-        old_locale = g_strdup (setlocale (LC_NUMERIC, NULL));
-        setlocale (LC_NUMERIC, "C");
-	for(i=12;i>0;i--) {
-		g_snprintf(format, sizeof(format), "%c .%dg", '%', i);
-		g_snprintf(buf, sizeof(buf), format, gc->_priv->result);
-		if(strlen(buf)<=12)
+	gnome_i18n_push_c_numeric_locale ();
+	for (i = 12; i > 0; i--) {
+		g_snprintf (format, sizeof (format), "%c .%dg", '%', i);
+		g_snprintf (buf, sizeof (buf), format, gc->_priv->result);
+		if (strlen (buf) <= 12)
 			break;
 	}
-        setlocale (LC_NUMERIC, old_locale);
-	g_free (old_locale);
+	gnome_i18n_pop_c_numeric_locale ();
 
 	strncpy(gc->_priv->result_string,buf,12);
 	gc->_priv->result_string[12]='\0';
@@ -688,7 +684,6 @@ add_digit(GtkWidget *w, gpointer data)
 	GnomeCalculator *gc = gtk_object_get_user_data(GTK_OBJECT(w));
 	CalculatorButton *but = data;
 	gchar *digit = but->name;
-	char *old_locale;
 
 	if(gc->_priv->error)
 		return;
@@ -739,11 +734,9 @@ add_digit(GtkWidget *w, gpointer data)
 	gtk_widget_queue_draw (gc->_priv->display);
 
         /* make sure get values in a consistent manner */
-        old_locale = g_strdup (setlocale (LC_NUMERIC, NULL));
-        setlocale (LC_NUMERIC, "C");
+	gnome_i18n_push_c_numeric_locale ();
 	sscanf(gc->_priv->result_string, "%lf", &gc->_priv->result);
-        setlocale (LC_NUMERIC, old_locale);
-	g_free (old_locale);
+	gnome_i18n_pop_c_numeric_locale ();
 }
 
 static gdouble
@@ -758,7 +751,6 @@ negate_val(GtkWidget *w, gpointer data)
 {
 	GnomeCalculator *gc = gtk_object_get_user_data(GTK_OBJECT(w));
 	char *p;
-	char *old_locale;
 
 	g_return_if_fail(gc!=NULL);
 
@@ -786,11 +778,9 @@ negate_val(GtkWidget *w, gpointer data)
 	}
 
         /* make sure get values in a consistent manner */
-        old_locale = g_strdup (setlocale (LC_NUMERIC, NULL));
-        setlocale (LC_NUMERIC, "C");
+	gnome_i18n_pop_c_numeric_locale ();
 	sscanf(gc->_priv->result_string, "%lf", &gc->_priv->result);
-        setlocale (LC_NUMERIC, old_locale);
-	g_free (old_locale);
+	gnome_i18n_push_c_numeric_locale ();
 
 	gtk_widget_queue_draw (gc->_priv->display);
 }
